--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "js-yaml": "^4.1.0",
+    "mongoose": "^8.3.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
