--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.11.20",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "cross-env": "^7.0.3",
@@ -45,11 +46,12 @@
     ]
   },
   "dependencies": {
-    "@types/winston": "^2.4.4",
+    "body-parser": "^1.20.2",
     "config": "^3.3.11",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.1",
     "js-yaml": "^4.1.0",
     "mongoose": "^8.3.3",
     "uuid": "^9.0.1",
