--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/config": "^3.3.4",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
@@ -48,11 +49,15 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "config": "^3.3.11",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.13.1",
     "js-yaml": "^4.1.0",
+    "jwks-rsa": "^3.1.0",
     "mongoose": "^8.3.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
