--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/config": "^3.3.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
     "@types/supertest": "^6.0.2",
@@ -47,11 +48,13 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.569.0",
     "body-parser": "^1.20.2",
     "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "express-jwt": "^8.4.1",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
