--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.569.0",
+    "@aws-sdk/lib-storage": "^3.569.0",
     "body-parser": "^1.20.2",
     "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
