--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "joi": "^17.13.1",
     "js-yaml": "^4.1.0",
     "jwks-rsa": "^3.1.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.3.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
